# NekoLauncher

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CmakeLists.txt  CmakeLists.txt.example  CmakeListsAutoMoc.txt  CmakeListsCopy.txt  CmakeListsGeneratedMoc.txt  LICENSE  bgm.json.example  build.bat  build.sh  config.ini  config.ini.example  readme.md  readme_zh_hans.md  readme_zh_hant.md  test.cpp
.github/workflows/: ci.yml  cmake-macos-platform.yml  cmake-single-platform.yml
doc/: api.md  dev.md  error.md  exception.md  readme_zh_hant.md  server.md
include/neko/app/: api.hpp  app.hpp  appSubscribe.hpp  appinfo.hpp  appinit.hpp  clientConfig.hpp  configManager.hpp  eventTypes.hpp  lang.hpp  nekoLc.hpp  readme.md  readne.md
include/neko/bus/: configBus.hpp  eventBus.hpp  readme.md  resources.hpp  threadBus.hpp
include/neko/core/: appinfo.hpp  auth.hpp  bgm.hpp  configManager.hpp  core.hpp  coreSubscribe.hpp  crashReporter.hpp  downloadPoster.hpp  feedback.hpp  install.hpp  launcher.hpp  launcherProcess.hpp  logFileWatcher.hpp  maintenance.hpp  news.hpp  readme.md  remoteConfig.hpp  resources.hpp  threadPool.hpp  update.hpp
include/neko/event/: event.hpp  eventTypes.hpp  readme.md
include/neko/function/: archiver.hpp  detectFileType.hpp  info.hpp  lang.hpp  pattern.hpp  utilities.hpp
include/neko/log/: nlog.hpp
include/neko/minecraft/: account.hpp  authMinecraft.hpp  downloadSource.hpp  installMinecraft.hpp  launcherMinecraft.hpp  minecraftSubscribe.hpp  readme.md
include/neko/network/: network.hpp  networkCommon.hpp  networkTypes.hpp
include/neko/schema/: api.hpp  clientConfig.hpp  clientconfig.hpp  eventTypes.hpp  exception.hpp  nekodefine.hpp  srcloc.hpp
include/neko/system/: platform.hpp
include/neko/ui/: animation.hpp  fonts.hpp  page.hpp  readme.md  state.hpp  theme.hpp  themeIO.hpp  uiEventDispatcher.hpp  uiMsg.hpp  uiSubscribe.hpp
include/neko/ui/dialogs/: hintDialog.hpp  inputDialog.hpp  noticeDialog.hpp  themeEditorDialog.hpp
include/neko/ui/pages/: aboutPage.hpp  homePage.hpp  loadingPage.hpp  newsPage.hpp  settingPage.hpp  settingPages.hpp
include/neko/ui/widgets/: headBarWidget.hpp  musicWidget.hpp  newsWidget.hpp  pixmapWidget.hpp
include/neko/ui/windows/: logViewerWindow.hpp  nekoWindow.hpp
lang/: en.json  zh_cn.json  zh_hans.json  zh_hant.json  zh_tw.json
langs/: en.json  zh_hans.json  zh_hant.json
os/mac/: Info.plist
os/mac/Resources/: icon.icns
os/windows/: icon.rc
res/win/: icon.rc
script/: exlib_for_ldd.sh  exlib_for_otool.sh  exlib_forldd.sh  exlib_forotool.sh
src/: autoinit.cpp  config.ini.example  core.cpp  exec.cpp  headbar.cpp  info.cpp  launcherProcess.cpp  loguru.cpp  main.cpp  mainwindow.cpp  memoryinfo.cpp  network.cpp
src/data/: hostlist  version  website
src/include/: autoinit.h  autoinit.hpp  cconfig.h  cconfig.hpp  clientconfig.hpp  core.h  core.hpp  err.h  err.hpp  exec.h  exec.hpp  fn.h  headbar.h  info.h  info.hpp  io.h  io.hpp  log.h  log.hpp  logviewer.hpp  mainwindow.h  mainwindow.hpp  msgtypes.h  msgtypes.hpp  nekodefine.hpp  nerr.hpp  network.h  network.hpp  nlog.hpp  one.hpp  threadpool.h  threadpool.hpp
src/include/neko/bus/: threadBus.hpp
src/include/neko/core/: app.hpp  appinfo.hpp  appinit.hpp  configBus.hpp  configManager.hpp  core.hpp  install.hpp  launcher.hpp  launcherProcess.hpp  nlog.hpp  resources.hpp  threadBus.hpp  threadPool.hpp
src/include/neko/event/: event.hpp  eventBus.hpp  eventTypes.hpp
src/include/neko/function/: archiver.hpp  autoinit.hpp  detectFileType.hpp  exec.hpp  info.hpp  lang.hpp  one.hpp  pattern.hpp  utilities.hpp
src/include/neko/log/: logviewer.hpp  nlog.hpp
src/include/neko/minecraft/: account.hpp  downloadSource.hpp  installMinecraft.hpp  launcherMinecraft.hpp
src/include/neko/network/: network.hpp
src/include/neko/schema/: api.hpp  clientconfig.hpp  exception.hpp  nekodefine.hpp  nerr.hpp  priority.hpp  srcloc.hpp  state.hpp  types.hpp  wmsg.hpp
src/include/neko/system/: memoryinfo.hpp  platform.hpp
src/include/neko/ui/: index.hpp  logviewer.hpp  mainwindow.hpp  pixmapWidget.hpp  settingPages.hpp  theme.hpp  toolbar.hpp  uiMsg.hpp  wmsg.hpp
src/lang/: en.json  zh_cn.json  zh_tw.json
src/neko/: main.cpp
src/neko/core/: bgm.cpp  crashReporter.cpp  launcherProcess.cpp  logFileWatcher.cpp  maintenance.cpp  news.cpp  remoteConfig.cpp  update.cpp
src/neko/function/: archiverZip.cpp
src/neko/minecraft/: authMinecraft.cpp  installMinecraft.cpp  launcherMinecraft.cpp
src/neko/network/: network.cpp
src/neko/ui/: animation.cpp  mainwindow.cpp  themeIO.cpp
src/neko/ui/dialogs/: hintDialog.cpp  inputDialog.cpp  noticeDialog.cpp  themeEditorDialog.cpp
src/neko/ui/pages/: aboutPage.cpp  homePage.cpp  loadingPage.cpp  newsPage.cpp  settingPage.cpp  settingPages.cpp
src/neko/ui/widgets/: headBarWidget.cpp  headbarWidget.cpp  musicWidget.cpp  newsWidget.cpp  pixmapWidget.cpp
src/neko/ui/windows/: logViewerWindow.cpp  mainwindow.cpp  (+1 more)
src/platform/unix/: platform_unix.cpp
src/platform/windows/: memoryinfo_windows.cpp  platform_windows.cpp
src/tools/exportJson/: CMakeListsCopy.txt  exec.h  main.cpp
src/updatePrograms/: exec.h  main.cpp
test/: event_test.cpp  nlog_test.cpp
test/network/: CmakeLists copy.txt  err.h  exec.cpp  exec.h  log.h  main.cpp  network.cpp  network.h  one.h  threadpool.h
tests/: CMakeLists.txt  api_tojson_test.cpp  neko_app_test.cpp  neko_lc_app_api_test.cpp  neko_lc_app_test.cpp  neko_lc_bus_test.cpp  neko_lc_function_test.cpp  neko_lc_schema_test.cpp
tests/app/: CMakeLists.txt  app_test.cpp  appinfo_test.cpp  clientConfig_test.cpp  configManager_test.cpp  eventTypes_test.cpp  lang_test.cpp
tests/bus/: CMakeLists.txt  configBus_test.cpp  eventBus_test.cpp  resources_test.cpp  threadBus_test.cpp
tests/core/: CMakeLists.txt  downloadPoster_test.cpp  launcherProcess_test.cpp  maintenance_test.cpp  update_test.cpp
tests/minecraft/: CMakeLists.txt  authMinecraft_test.cpp  downloadSource_test.cpp  launcherMinecraft_test.cpp
themes/: Aurora.json
tools/update/: CMakeLists.txt  main.cpp
(+13 files in other folders)
